--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,14 @@ Title: Gives the plots of the vote output of different municipalities
 Version: 0.1.0
 Author: Fengjuanchen and Sreenand.S
 Maintainer: Sreenand.S <nandu.neo@gmail.com> Fengjuan Chen <fengjuanchen5@gmail.com>
-Description: Gives the different plots for each municipality
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: The different appraoches implemented here are greedy,bruteforce and dynamic approach.Dynamic appraoch is also solved it recursive and using RCPP method.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Depends: httr,shiny,dplyr,readxl,curl,ggplot2
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
