--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Depends: httr,shiny,dplyr,readxl,curl,ggplot2
 Suggests: 
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    ggplot2,
+    readxl
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
